features/syncthing/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: syncthing
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
  - name: tcp
    port: 22000
    targetPort: 22000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: syncthing
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
  - name: udp
    port: 22000
    targetPort: 22000
    protocol: UDP
