features/syncthing/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-ingress
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`syncthing.ts.noodoodle.us`)
    services:
    - name: syncthing-web
      namespace: syncthing
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-web
spec:
  selector:
    app: syncthing
  ports:
  - name: http
    port: 80
    targetPort: 8384
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: syncthing
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
  - name: tcp
    port: 22000
    targetPort: 22000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: syncthing
spec:
  type: LoadBalancer
  selector:
    app: syncthing
  ports:
  - name: udp
    port: 22000
    targetPort: 22000
    protocol: UDP
